--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -1,28 +1,149 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+:root {
+  --light: #f0ead2;
+  --primary: #dde5b6;
+  --secondary: #adc178;
+  --tertiary: #a98467;
+  --dark: #6c584c;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+  --spacing-five: calc(2.5rem);
+
+}
+
+.header {
+  background-color: var(--light);
+  display: flex;
+  justify-content: space-between;
+  min-height: 100px;
+  border-bottom: 5px solid var(--tertiary);
+  border-right: 5px solid var(--tertiary);
+  color: var(--dark);
+  
+}
+
+a {
+  text-decoration: none;
+  color: var(--dark);
+}
+p {
+  margin: 10px;
+}
+
+h1 {
+  display: inline;
+  align-self: center;
+  padding: var(--spacing-two);
+  font-size: 48px;
+}
+
+.wrapper {
+  min-height: calc(100vh - 150px);
+  background-color: var(--secondary);
+}
+
+.section-header {
+  margin-bottom: 30px;
+  color: var(--dark);
+}
+
+section{
+  padding: var(--spacing-two);
+  color: black;
+}
+
+.footer {
+  height: 50px;
+  background-color: var(--light);
+  border-top: 5px solid var(--tertiary);
+  border-right: 5px solid var(--tertiary);
+  color: var(--dark);
+  display: flex;
+  justify-content: center;
+
+}
+
+.footer a:hover {
+  color: var(--tertiary);
+}
+
+.footer-list {
+  padding: 0;
+}
+
+.footer-list li {
+  padding: 0 25px 0 25px;
+  font-size: 20px;
 }
 
 .nav-list {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
+  align-items: center;
 }
 
 .list-item {
   margin-right: 25px;
   margin-left: 25px;
 }
+.project-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
+.project-item {
+  width: 30%;
+  min-height: 300px;
+  margin: 10px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-item a {
+  color: black;
+}
+
+.project-header {
+  background-color: var(--primary);
+  background-color: var(--light);
+}
+
+.project-title {
+  font-size: 24px;
+  color: black;
+  margin-right: 50px;
+}
+
+.project-title:hover {
+  color: var(--tertiary);
+}
+
+.project-tech {
+  margin: 0;
+  background-color: var(--tertiary);
+}
+
+.project-github:hover {
+  color: var(--tertiary);
+}
 
 .navActive {
   color: rgb(22, 68, 40);
@@ -42,4 +163,57 @@ code {
 
 .blog-site {
   background-color: rgb(87, 120, 132);
+}
+form div {
+  margin-bottom: 25px;
+}
+
+label {
+  display: block;
+}
+
+input {
+  width: 40%;
+  font-size: 18px;
+  outline: none;
+}
+
+textarea {
+  width: 40%;
+  font-size: 18px;
+  outline: none;
+  font-family:Arial, Helvetica, sans-serif
+}
+
+.error-text {
+  color: var(--error)
+}
+
+button {
+  font-size: 1rem;
+  text-decoration: none;
+  padding: 0.25rem 1rem;
+  border-radius: .5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 0 1px;
+  background-color: var(--tertiary);
+}
+
+.download-link {
+  font-size: 18px;
+}
+
+.download-link a:hover {
+  color: var(--tertiary);
+}
+
+.list-header {
+  margin-top: 25px;
+  font-size: 20px;
+}
+
+.prof-list {
+  font-size: 18px;
 }
