--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -101,7 +101,7 @@ h1 {
 
 /* General  */
 .content-wrapper {
-  min-height: calc(100vh - 150px);
+  min-height: calc(100vh - 100px);
   background-color: var(--secondary);
 }
 
@@ -320,7 +320,7 @@ font-size: 20px;
 }
 
 
-.fo-char-mgr .project-tech{
+.blog-site .project-tech{
 font-size: 15px;
 }
 }
